--- a/src/Makefile
+++ b/src/Makefile
@@ -24,6 +24,9 @@ $(DEFINE_TARGETS)
 
 # installation
 
+DLL := $(if $(NO_SHARED),,$(GTPARSER_LIB_NAME) $(GTPARSER_DLL_VARIANTS))
+LIB := $(if $(NO_STATIC),,$(GTPARSER_LIB_NAME) $(GTPARSER_LIB_VARIANTS))
+
 LIBRARY_NAME := gtparser
 
 LIBRARY_HEADERS := \
