update build system

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,3 +1,2 @@
-include $(dir $(lastword $(MAKEFILE_LIST)))../top.mk
-TO_MAKE := basic_scanner_test.mk cstring_parser_test.mk
-include $(MTOP)/parallel.mk
+include $(dir $(lastword $(MAKEFILE_LIST)))../project.mk
+$(call PROCESS_SUBMAKES,basic_scanner_test.mk cstring_parser_test.mk)
